infra/deploy/environments/dev/kustomize/external_dns.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns
  namespace: dev
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: external-dns
  template:
    metadata:
      labels:
        app: external-dns
    spec:
      serviceAccountName: external-dns
      containers:
        - name: external-dns
          image: registry.k8s.io/external-dns/external-dns:v0.15.0
          args:
            - --provider=cloudflare
            - --log-level=trace
            - --log-format=text
            - --interval=3m
            - --events
            - --cloudflare-proxied                                # (optional) enable the proxy feature of Cloudflare (DDOS protection, CDN...)
            - --source=ingress                                    # service is also possible
            # - --source=service                                  # ingress is also possible
            # - --cloudflare-dns-records-per-page=5000            # (optional) configure how many DNS records to fetch per request
            # - --domain-filter=dinnerdonebetter.dev              # (optional) limit to only example.com domains; change to match the zone created above.
            # - --zone-id-filter=e70f90623cbb6e3b344f132b58311c69 # (optional) limit to a specific zone.
---
