infra/deploy/environments/dev/kustomize/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dinner-done-better-ingress
  annotations:
    kubernetes.io/ingress.class: gce
    external-dns.alpha.kubernetes.io/hostname: "dinnerdonebetter.dev"
spec:
  tls:
    - hosts:
        - api.dinnerdonebetter.dev
        - app.dinnerdonebetter.dev
        - admin.dinnerdonebetter.dev
        - www.dinnerdonebetter.dev
      secretName: dinner-done-better-cert
  rules:
    - host: "api.dinnerdonebetter.dev"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: dinner-done-better-api-svc
                port:
                  number: 8000
    - host: "app.dinnerdonebetter.dev"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: dinner-done-better-webapp-svc
                port:
                  number: 9000
---
